--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="text-center">
       <!-- Logo -->
       <img
-        src="brainempirelogo.jpeg"
+        src="img/brainempirelogo.jpeg"
         alt="The Brain Empire"
         class="mx-auto w-56 md:w-72 lg:w-80"
       />
